src/main/java/org/example/kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: ClusterIP
  selector:
    app: library-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
